# metaprogramming

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FOSL-metaprogrammingConfig.cmake
example/project/: CMakeLists.txt
source/FOSL/: metaprogramming.cpp  metaprogramming.hpp
source/FOSL/metaprogramming/: add_rvalue_reference.hpp  declval.hpp  disable_if.hpp  enable_if.hpp  false_type.hpp  is_base_of.hpp  is_derivable.hpp  is_false.hpp  is_not_base_of.hpp  is_not_false.hpp  is_not_pointer_convertible.hpp  is_not_same.hpp  is_not_trivial.hpp  is_not_true.hpp  is_pointer_convertible.hpp  is_same.hpp  is_trivial.hpp  is_true.hpp  not_false_type.hpp  not_true_type.hpp  remove_const.hpp  remove_const_volatile.hpp  remove_volatile.hpp  require.hpp  true_type.hpp  void_type.hpp
test/: CMakeLists.txt
test/conditional_enabling/: CMakeLists.txt
test/conditional_enabling/source/: main.cpp
test/enable_if/: CMakeLists.txt
test/enable_if/source/: main.cpp
test/removing_type_qualifiers/: CMakeLists.txt
test/removing_type_qualifiers/source/: main.cpp
test/type_conditionals/: CMakeLists.txt
test/type_conditionals/source/: main.cpp
test/unit/: CMakeLists.txt
test/unit/conditional_enabling/: CMakeLists.txt
test/unit/conditional_enabling/source/: main.cpp
test/unit/removing_type_qualifiers/: CMakeLists.txt
test/unit/removing_type_qualifiers/source/: main.cpp
test/unit/type_conditionals/: CMakeLists.txt
test/unit/unsorted/: CMakeLists.txt
test/unit/unsorted/source/: main.cpp
test/unsorted/: CMakeLists.txt
